# py-pattern

./: .gitignore  LICENSE  README.md  pyproject.toml
src/match_expression/: __init__.py  match.py
src/py_pattern/: __init__.py  match.py
tests/: test_match__enum.py  test_match__literal.py  test_match__type.py
tests/match_expression/: test_match.py
